--- a/MergeImgCssGenerator/test.html
+++ b/MergeImgCssGenerator/test.html
@@ -6,8 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="sprite" id="sprite-img2"></div>
+<div class="sprite" id="sprite-PSM_V70_D469_Vision_test_dot"></div>
 <p>Autre image</p>
-<div class="sprite" id="sprite-img3"></div>
+<div class="sprite" id="sprite-587170c07b7f6103e35c6cb8"></div>
+<p>Autre image</p>
+<div class="sprite" id="sprite-icons8-futurama-zoidberg-128"></div>
+<p>Autre image</p>
+<div class="sprite" id="sprite-icons8-futurama-hermes-conrad-128"></div>
+<p>Autre image</p>
+<div class="sprite" id="sprite-icons8-futurama-professor-farnsworth-128"></div>
+
 </body>
 </html>
