--- a/MergeImgCssGenerator/test.html
+++ b/MergeImgCssGenerator/test.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="sprite" id="sprite-587170757b7f6103e35c6cb2"></div>
+<div class="sprite" id="sprite-img4"></div>
 <p>Autre image</p>
-<div class="sprite" id="sprite-icons8-futurama-zoidberg-128"></div>
+<div class="sprite" id="sprite-img3"></div>
 <p>Autre image</p>
-<div class="sprite" id="sprite-icons8-futurama-hermes-conrad-128"></div>
+<div class="sprite" id="sprite-img5"></div>
 <p>Autre image</p>
-<div class="sprite" id="sprite-icons8-futurama-professor-farnsworth-128"></div>
+<div class="sprite" id="sprite-img2"></div>
 
 </body>
 </html>
